...
            Box(
                modifier =
                modifier
                    .fillMaxSize()
                    .background(Color.Black)
                    .semantics { testTagsAsResourceId = true }
                    .testTag("moments_photo_preview_dialog"),
                contentAlignment = Alignment.Center,
            ) {
                // 1. 水平滑动图片分页
                HorizontalPager(
                    state = pagerState,
                    modifier = Modifier.fillMaxSize(),
...
